--- a/static/index.html
+++ b/static/index.html
@@ -479,7 +479,7 @@
 
       const chart = new Chart(ctx, {
         // The type of chart we want to create
-        type: 'bar',
+        type: 'line',
 
         // The data for our dataset
         data: {
