--- a/static/index.html
+++ b/static/index.html
@@ -202,7 +202,7 @@
           <div class="row text-muted">
             <div class="col-6 text-start">
               <p class="mb-0">
-                <a class="text-muted" href="#" target="_blank"><strong>blp-gresik</strong></a>
+                <a class="text-muted" href="#" target="_blank"><strong>LENSA</strong></a>
                 -
                 <a class="text-muted" href="#" target="_blank"><strong></strong></a>
                 &copy;
