--- a/static/index.html
+++ b/static/index.html
@@ -152,43 +152,43 @@
           <div class="row">
             <div class="col-12 col-md-6 col-xxl-4 d-flex order-1 order-xxl-1">
               <div class="chart chart-sm">
-                <h5 class="card-title mb-0"><a href="#">Penunjukan Langsung</a></h5>
+                <h5 class="card-title  mb-4 mt-4 bg-info p-2"><a href="#" class="text-white">Penunjukan Langsung</a></h5>
                 <canvas id="getpl"></canvas>
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-4 d-flex order-1 order-xxl-1">
               <div class="chart chart-sm">
-                <h5 class="card-title mb-0"><a href="seleksi.html">Pengadaan Seleksi</a></h5>
+                <h5 class="card-title mb-4 mt-4 bg-success p-2"><a href="seleksi.html" class="text-white">Pengadaan Seleksi</a></h5>
                 <canvas id="seleksi"></canvas>
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-4 d-flex order-1 order-xxl-1">
               <div class="chart chart-sm">
-                <h5 class="card-title mb-0"><a href="tender.html">Tender</a></h5>
+                <h5 class="card-title  mb-4 mt-4 bg-danger p-2"><a href="tender.html" class="text-white">Tender</a></h5>
                 <canvas id="tender"></canvas>
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-4 d-flex order-1 order-xxl-1">
               <div class="chart chart-sm">
-                <h5 class="card-title mb-0"><a href="pengadaanlangsung.html">Pengadaan Langsung</a></h5>
+                <h5 class="card-title mb-4"><a href="pengadaanlangsung.html">Pengadaan Langsung</a></h5>
                 <canvas id="pengadaanlangsung"></canvas>
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-4 d-flex order-1 order-xxl-1">
               <div class="chart chart-sm">
-                <h5 class="card-title mb-0"><a href="purchasing.html">E-Purchasing</a></h5>
+                <h5 class="card-title mb-4 mt-4"><a href="purchasing.html">E-Purchasing</a></h5>
                 <canvas id="purchase"></canvas>
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-4 d-flex order-1 order-xxl-1">
               <div class="chart chart-sm">
-                <h5 class="card-title mb-0"><a href="swakelola.html">Swakelola</a></h5>
+                <h5 class="card-title mb-4 mt-4"><a href="swakelola.html">Swakelola</a></h5>
                 <canvas id="swakelola"></canvas>
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-4 d-flex order-1 order-xxl-1">
               <div class="chart chart-sm">
-                <h5 class="card-title mb-0"><a href="pengecualian.html">Pengadaan Pengecualian</a></h5>
+                <h5 class="card-title mb-4 mt-4"><a href="pengecualian.html">Pengadaan Pengecualian</a></h5>
                 <canvas id="kecuali"></canvas>
               </div>
             </div>
